# KM-curve-estimator

./: .env.example  .gitignore  =3.8.0  LICENSE.txt  License.txt  README.md  pyproject.toml
.claude/plans/: logical-herding-toucan.md
src/km_estimator/: __init__.py  cli.py  config.py  pipeline.py
src/km_estimator/models/: __init__.py  ipd_output.py  plot_metadata.py  state.py
src/km_estimator/nodes/: __init__.py  axis_calibration.py  input_guard.py  mmpu.py  preprocessing.py  reconstruction.py
src/km_estimator/nodes/digitization/: __init__.py  axis_calibration.py  censoring_detection.py  curve_isolation.py  overlap_resolution.py
src/km_estimator/nodes/digitization_2/: __init__.py  axis_map.py  path_trace.py  probability_map.py
src/km_estimator/nodes/digitization_3/: __init__.py  debug.py  legend_color.py  path_trace.py  postprocess.py  probability_map.py
src/km_estimator/nodes/digitization_4/: __init__.py  axis_map.py  path_trace.py  postprocess.py  probability_map.py
src/km_estimator/nodes/digitization_5/: __init__.py  axis_map.py  censoring_detection.py  debug.py  legend_color.py  path_trace.py  postprocess.py  probability_map.py
src/km_estimator/presets/: __init__.py  thresholds.py
src/km_estimator/utils/: __init__.py  cv_utils.py  gemini_client.py  openai_client.py  shape_metrics.py  tiered_extractor.py
tests/: __init__.py  diag_075.py  diag_080.py  diag_080_detail.py  diag_color.py  diag_deep.py  diag_evidence.py  diag_pipeline.py  diag_pixels.py  run_diag6.py  run_diag_full.py  run_recon_bench.py  run_risk_table_audit.py
tests/fixtures/difficult/: detailed_run_20260205_205445.json  detailed_run_20260205_210045.json  detailed_run_full5_20260206_044909.json  detailed_run_realistic_hard_20260206_005642.json  detailed_run_realistic_hard_cases_20260206_010059.json  detailed_run_realistic_hard_cases_20260206_010950.json  detailed_run_realistic_hard_cases_after_fixes_20260206_015939.json  manifest.json  summary.json
tests/fixtures/difficult/crossing_compressed/: ground_truth.csv  hard_points.json  metadata.json  raw_survival_data.csv  results.json  risk_table_data.csv
tests/fixtures/difficult/four_arm_lowres/: ground_truth.csv  hard_points.json  metadata.json  raw_survival_data.csv  results.json  risk_table_data.csv
tests/fixtures/difficult/low_res_overlap/: ground_truth.csv  hard_points.json  metadata.json  raw_survival_data.csv  results.json  risk_table_data.csv
tests/fixtures/difficult/sparse_degraded/: ground_truth.csv  hard_points.json  metadata.json  raw_survival_data.csv  results.json  risk_table_data.csv
tests/fixtures/difficult/truncated_noisy/: ground_truth.csv  (+5 more)
tests/fixtures/standard/: manifest.json  summary.json
tests/synthetic/: __init__.py  data_gen.py  ground_truth.py  modifiers.py  presets.py  renderer.py  runner.py
(+905 files in other folders)
