[project]
name = "km-curve-estimator"
version = "0.1.0"
description = "Digitize Kaplan-Meier curves and reconstruct individual patient data"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "numpy>=2.0.0",
    "scikit-learn-extra>=0.3.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "opencv-contrib-python>=4.13.0.90",
    "opencv-stubs>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
km-extract = "km_estimator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/km_estimator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "km_estimator.nodes.mmpu",
    "km_estimator.nodes.digitization",
    "km_estimator.nodes.digitization.curve_isolation",
    "km_estimator.nodes.digitization.overlap_resolution",
    "km_estimator.nodes.digitization.censoring_detection",
    "km_estimator.utils.cv_utils",
    "km_estimator.utils.openai_client",
    "km_estimator.utils.gemini_client",
    "km_estimator.utils.tiered_extractor",
    "km_estimator.pipeline",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
